# poker

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
tests/: test__main.py
